<resources>
    <string name="app_name">TripIt</string>

    <string name="button_text">Anuradhapura</string>
    <string name="button_text2">Jaffna</string>
    <string name="button_text3">Kandy</string>
    <string name="button_text4">Kegalle</string>
    <string name="button_text5">Mathale</string>
    <string name="button_text6">Yapahuwa</string>

    <string name="button_text7">Places</string>
    <string name="button_text8">Hotels</string>
    <string name="button_text9">Guides</string>
    <string name="button_text10">Shop</string>
    <string name="button_text11">View</string>

    <string name="TV1">Search city</string>

    <string name="TV2">--Welcome to--</string>
    <string name="Tv3">TripIt</string>

    <string name="TVI1">Search place</string>
    <string name="TVI2">Nuwaraeliya</string>
    <string name="TVI3">Places to visit</string>

    <string name="Pls1">Hortain plains</string>
    <string name="Pls2">Gregory Lake</string>

    <string name="desc1">Hortain plains............
                        .............
                        ..............
    </string>
    <string name="desc2">Gregory Lake...........
                        ..................
                        ..................
    </string>

    <string name="map">Map</string>

    <string name="lakeGreg">Lake Gregory, sometimes also called Gregory Lake or Gregory Reservoir,
        is a reservoir in heart of the tea country hill city, Nuwara Eliya, Sri Lanka.
        Lake Gregory was constructed during the period of British Governor Sir William Gregory in 1873.
        The lake and the surrounding area make up the Gregory Lake Area
    </string>

    <string name="adbtn">Add Places</string>
    <string name="adbtn1">View Places</string>

    <string name = "Edit">Edit place</string>

    <!-- string resouces of add place form-->

    <string name="place">place</string>
    <string name="des">Description</string>
    <string name="rate">Add rate</string>
    <string name="city">City</string>
    <string name="upload">Upload photos </string>

    <!-- edit text-->
    <string name="edpl">Enter place</string>
    <string name="eddes">Description</string>
    <string name="adcity">Enter City</string>
    <string name="edup">Drag photos here</string>

    <string name="view"> Places list</string>
    <string name = "editrate">Edit rate</string>



</resources>