<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addform">


    <Button
        android:id="@+id/button14"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:background="@color/Adbtncolor"
        android:text="@string/adbtn"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar2"
    android:layout_width="406dp"
    android:layout_height="64dp"
    android:background="@color/tiColor1"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0" />

    <ImageButton
    android:id="@+id/imageButton1"
    android:layout_width="67dp"
    android:layout_height="59dp"
    android:background="@color/tiColor1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/toolbar2"
    app:layout_constraintHorizontal_bias="0.026"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/home" />

    <ImageButton
    android:id="@+id/imageButton2"
    android:layout_width="58dp"
    android:layout_height="64dp"
    android:layout_marginTop="10dp"
    android:background="@color/tiColor1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/toolbar2"
    app:layout_constraintHorizontal_bias="0.267"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/toolbar2"
    app:layout_constraintVertical_bias="1.0"
    app:srcCompat="@drawable/place" />

    <ImageButton
    android:id="@+id/imageButton3"
    android:layout_width="73dp"
    android:layout_height="59dp"
    android:background="@color/tiColor1"
    app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
    app:layout_constraintEnd_toEndOf="@+id/toolbar2"
    app:layout_constraintStart_toStartOf="@+id/toolbar2"
    app:srcCompat="@drawable/hotel" />

    <ImageButton
    android:id="@+id/imageButton4"
    android:layout_width="66dp"
    android:layout_height="53dp"
    android:layout_marginStart="256dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="77dp"
    android:layout_marginBottom="6dp"
    android:background="@color/tiColor1"
    app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
    app:layout_constraintEnd_toEndOf="@+id/toolbar2"
    app:layout_constraintStart_toStartOf="@+id/toolbar2"
    app:layout_constraintTop_toTopOf="@+id/toolbar2"
    app:srcCompat="@drawable/guide" />

    <ImageButton
    android:id="@+id/imageButton5"
    android:layout_width="57dp"
    android:layout_height="50dp"
    android:layout_marginStart="341dp"
    android:layout_marginTop="6dp"
    android:background="@color/tiColor1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@+id/toolbar2"
    app:layout_constraintTop_toTopOf="@+id/toolbar2"
    app:srcCompat="@drawable/guide" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="171dp"
        android:layout_height="81dp"
        android:text="@string/adbtn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:text="@string/place"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:text="@string/des"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:text="@string/rate"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:text="@string/city"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:text="@string/upload"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edpl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="221dp"
        android:layout_height="87dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/eddes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="220dp"
        android:layout_height="91dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/adcity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>